--- a/src/index.html
+++ b/src/index.html
@@ -7,6 +7,7 @@
     <title>Homework 10</title>
   </head>
   <body>
+    <h1>hazi</h1>
     <div class="container">
       <select class="breed-select"></select>
       <p class="loader"></p>
